<resources>
    <string name="app_name">Ipredict</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">Ipredict</string>
    <string name="title_activity_register_page"></string>
    <string name="title_activity_welcome_screen"></string>
    <string name="title_activity_leader_board">LeaderBoard</string>
    <string name="title_activity_my_points">MyPointsActivity</string>
    <string name="title_activity_mycompition">MycompitionActivity</string>
    <string name="title_activity_competitor_score">CompetitorScore</string>
    <string name="title_activity_profile">Profile</string>
    <string name="facebook_app_id">162821060783227</string>
    <string name="comingsoon">Coming soon</string>
    <string name="howtoplay">How to play</string>
    <string name="aboutus">About us</string>
    <string name="resulterror">Something went wrong.Check your internet connection</string>
    <string name="privacy">Privacy policy</string>
    <string name="faq">Faq</string>
    <string name="title_activity_bonus_points">BonusPointsActivity</string>
    <string name="matchstarted">Match already started.you can not enter into the match.</string>
    <!--Bonus point-->
    <string name="bonuspointtitle">Bonus Points</string>
    <!--Leader board-->
    <string name="leaderboardtitle">Leader Board</string>
    <!--game names-->
    <string name="cricket">Cricket</string>
    <string name="football">Football</string>
    <!--My competition-->
    <string name="mycompetitiontitle">My Competition</string>
    <!--My points-->
    <string name="mypointstitle">My points</string>
    <string name="myprofiletitle">My profile</string>
    <string name="editbutton">Edit</string>
    <string name="savebutton">Save</string>
    <!--Question activity-->
    <string name="nextbutton">Next</string>
    <string name="finishtext">Finished</string>
    <string name="submitbutton">Submit</string>
    <!--Register-->
    <string name="register">Register</string>
    <string name="mymatch">No matches available</string>
    <!--Support-->
    <string name="supporttitle">Support</string>
    <!--score-->
    <string name="scoretitle">Score</string>
    <string name="vs">Vs</string>
    <string name="referfriend">Share</string>
    <string name="get_start">Get Start</string>
    <string name="version_update">A New Version is Available</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="welcome_to">Welcome to</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_up">Sign up</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="login_with_google_plus">Login with google plus</string>

</resources>
